--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Marry Me</title>
+    <link rel="icon" type="image/x-icon" href="/image/logo.jpg"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link type="text/css" href="/jplayer/skin/pink.flag/css/jplayer.pink.flag.min.css" rel="stylesheet" />
+    <link type="text/css" href="/jplayer/skin/pink.flag/css/jplayer.pink.flag.min.css" rel="stylesheet"/>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/jplayer/jquery.jplayer.min.js"></script>
 
     <style>
-        body{ text-align:center}
-        #jp_container_1{margin:0 auto; }
+        body {
+            text-align: center
+        }
+
+        #jp_container_1 {
+            margin: 0 auto;
+        }
 
         #jp_container_1 {
             clear: both;
@@ -29,11 +35,13 @@
                         m4v: "http://www.jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v",
                         ogv: "http://www.jplayer.org/video/ogv/Big_Buck_Bunny_Trailer.ogv",
                         poster: "http://www.jplayer.org/video/poster/Big_Buck_Bunny_Trailer_480x270.png"
-                    });
+                    }).jPlayer("play");//自动播放
                 },
                 cssSelectorAncestor: "#jp_container_1",
                 swfPath: "/jplayer",
                 supplied: "m4v, ogv",
+                fullScreen: true,
+                fullWindow: true,
                 useStateClassSkin: true,
                 autoBlur: false,
                 smoothPlayBar: true,
@@ -41,11 +49,11 @@
                 remainingDuration: true,
                 toggleDuration: true
             });
-        }).jPlayer("play");
+        });
     </script>
 </head>
 <body>
-<div id="jp_container_1" class="jp-video " role="application" aria-label="media player" >
+<div id="jp_container_1" class="jp-video " role="application" aria-label="media player">
     <div class="jp-type-single">
         <div id="jquery_jplayer_1" class="jp-jplayer"></div>
         <div class="jp-gui">
